<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <StackView
            android:id="@+id/stack_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:loopViews="true" />

        <TextView
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/data_404"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_refresh_widget"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/refresh"
            android:textColor="@color/White"
            android:background="@color/Crimson"/>

        <TextView
            android:id="@+id/banner_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/rounded_yellow"
            android:text="@string/appwidget_text"
            android:textColor="@color/Black"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>



</FrameLayout>