<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.DetailMovieActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_info_backdroppath_movie"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/White"
            android:contentDescription="@string/todo"
            android:tint="#6F000000"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <ProgressBar
            android:id="@+id/progressBar_movie"
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-9dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_info_backdroppath_movie"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txt_info_title_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/judul_movie"
            android:textColor="@color/White"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/img_info_backdroppath_movie"
            app:layout_constraintEnd_toEndOf="@+id/img_info_backdroppath_movie"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txt_info_tanggal_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_grey"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="7dp"
            android:textColor="@color/White"
            app:layout_constraintStart_toEndOf="@+id/txt_info_score_movie"
            app:layout_constraintTop_toBottomOf="@+id/img_info_backdroppath_movie"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txt_info_score_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_grey"
            android:drawableStart="@drawable/ic_star"
            android:drawablePadding="2dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="5dp"
            android:textColor="@color/White"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_info_backdroppath_movie"
            tools:ignore="MissingConstraints" />

        <View
            android:id="@+id/v_1"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/Black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_info_tanggal_movie"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/img_info_poster_movie"
            android:layout_width="162dp"
            android:layout_height="243dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:background="@color/White"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"
            android:tint="#11000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/v_1"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_sinopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/synopsis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_info_poster_movie"
            app:layout_constraintTop_toBottomOf="@+id/v_1"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txt_info_overview_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="9"
            android:textColor="@color/Black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_info_poster_movie"
            app:layout_constraintTop_toBottomOf="@+id/tv_sinopsis"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn_set_favorite_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/Yellow"
            android:textColor="@color/Crimson"
            android:text="@string/add_to_favorite"
            app:layout_constraintBottom_toBottomOf="@+id/img_info_poster_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_info_poster_movie"
            tools:ignore="MissingConstraints" />

        <View
            android:id="@+id/v_2"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@color/Black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_info_poster_movie"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            app:layout_constraintEnd_toEndOf="@+id/v_2"
            app:layout_constraintStart_toStartOf="@+id/v_2"
            app:layout_constraintTop_toBottomOf="@+id/v_2"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_genre"
            style="@style/TextKeterangan"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/genre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_production"
            style="@style/TextKeterangan"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/production"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_info_genre_movie"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_homepage"
            style="@style/TextKeterangan"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/homepage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_info_production_movie"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/txt_info_genre_movie"
            style="@style/TextInfo"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tv_genre"
            app:layout_constraintTop_toBottomOf="@+id/tv_description"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txt_info_production_movie"
            style="@style/TextInfo"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_production"
            app:layout_constraintTop_toBottomOf="@+id/txt_info_genre_movie"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txt_info_homepage_movie"
            style="@style/TextInfo"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_homepage"
            app:layout_constraintTop_toBottomOf="@+id/txt_info_production_movie"
            tools:ignore="MissingConstraints" />

        <View
            android:id="@+id/v_3"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/Black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_info_homepage_movie"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_images"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/images"
            app:layout_constraintEnd_toEndOf="@+id/v_3"
            app:layout_constraintStart_toStartOf="@+id/v_3"
            app:layout_constraintTop_toBottomOf="@+id/v_3"
            tools:ignore="MissingConstraints" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_screenshot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_images"
            tools:ignore="MissingConstraints"
            tools:listitem="@layout/item_screenshot" />

        <TextView
            android:id="@+id/tv_detail_error_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            android:text="@string/data_404"
            android:textColor="@color/Black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>